--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- <script src="min.js"></script> -->
   <script src="script.js"></script>
 </body>
 </html>
