Добавили функции в men.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <!-- <script src="min.js"></script> -->
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script src="men.js"></script>
 </body>
 </html>
